# agentnb

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SKILL.md  SMOKE_SCENARIOS.md  pyproject.toml
.agents/skills/: SKILL.md
.agents/skills/agentnb/: SKILL.md
.agents/skills/full-review/: SKILL.md
.github/workflows/: ci.yml  publish.yml
agentnb/: .gitignore  README.md  ROADMAP.md  pyproject.toml
agentnb/.github/workflows/: ci.yml
agentnb/src/agentnb/: __init__.py  backend.py  errors.py  hooks.py  output.py  provisioner.py
agentnb/tests/: test_cli.py  test_contracts.py  test_ops.py  test_provisioner.py  test_runtime.py
docs/: REFACTOR.md  ROADMAP.md  SMOKE_SCENARIOS.md
src/agentnb/: __init__.py  advice.py  app.py  backend.py  cli.py  command_data.py  compact.py  contracts.py  errors.py  execution.py  execution_events.py  execution_invocation.py  execution_models.py  execution_output.py  history.py  introspection.py  introspection_models.py  invocation.py  journal.py  jupyter_protocol.py  ops.py  output.py  payloads.py  planning.py  projection.py  provisioner.py  recording.py  response_serialization.py  runtime.py  selectors.py  session.py  session_targeting.py  state.py  state_layout.py  state_manifest.py  state_persisted_resources.py  state_runtime.py  suggestions.py
src/agentnb/kernel/: __init__.py  backend.py  provisioner.py
src/agentnb/runs/: __init__.py  executor.py  local_manager.py  manager.py  models.py  store.py  worker.py
tests/: conftest.py  helpers.py  test_advice.py  test_app.py  test_backend_unit.py  test_cli.py  test_compact.py  test_contracts.py  test_errors.py  test_execution.py  test_execution_events.py  test_execution_invocation.py  test_execution_models.py  test_execution_output.py  test_history.py  test_introspection.py  test_invocation.py  test_journal.py  test_ops.py  test_ops_unit.py  test_output.py  test_package_api.py  test_planning.py  test_projection.py  test_provisioner.py  test_recording.py  test_recording_integration.py  test_response_serialization.py  test_runs_local_manager.py  test_runs_worker.py  test_runtime.py  test_runtime_hooks.py  test_runtime_provisioning.py  test_selectors.py  test_session.py  test_session_targeting.py  test_state.py  test_state_facade.py  test_state_manifest.py  test_state_persisted_resources.py  (+1 more)
(+1 files in other folders)
